# frontend-for-ai-tool

./: .env  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: clients_router.py  gmb_router.py  projects_router.py  websites_router.py
backend/app/core/: config.py  init_app.py  logging.py
backend/app/crud/: clients.py  gmb.py  projects.py  websites.py
backend/app/db/: mongo.py
backend/app/models/: client.py  gmb.py  project.py  website.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  gmb.js  project.js  websites.js
frontend/src/components/: AddClient.jsx  AddGmb.jsx  AddProject.jsx  ClientsList.jsx  EditClient.jsx  EditGmb.jsx  EditProject.jsx  GMBList.jsx  GenericTable.jsx  Layout.jsx  ProjectsList.jsx  WebsitesList.jsx
frontend/src/services/: api.js
frontend/src/utils/: index.js
